# raven

./: README.md  Raven.docx
src/: .flutter-plugins-dependencies  README.md  firebase.json  pubspec.yaml
src/android/: local.properties
src/android/app/: build.gradle.kts  google-services.json
src/docs/: backend_contract_v1.md  backend_contract_v2_sprint10.md  backend_contract_v3_sprint11.md
src/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
src/ios/Runner/: Info.plist
src/ios/Runner.xcodeproj/: project.pbxproj
src/lib/: firebase_options.dart  main.dart  splash_screen.dart
src/lib/app/: app.dart
src/lib/core/: enums.dart
src/lib/core/services/: id_validation_services.dart  raven_api_client.dart  raven_store.dart
src/lib/models/: account_security_models.dart  chat_models.dart
src/lib/screens/auth/: auth_screens.dart
src/lib/screens/chats/: chat_list_screen.dart  chat_screen.dart
src/lib/screens/contacts/: contact_screens.dart
src/linux/: CMakeLists.txt
src/linux/runner/: my_application.cc
src/macos/Runner.xcodeproj/: project.pbxproj
src/raven_backend/: .env.example  Cargo.toml  README.md
src/raven_backend/docs/: curl_examples.md
src/raven_backend/migrations/: 001_init.sql
src/raven_backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs
src/raven_backend/src/routes/: auth.rs  groups.rs  messages.rs  mod.rs  users.rs
src/raven_backend/src/services/: auth_service.rs  mod.rs  validation.rs
src/web/: index.html  manifest.json
src/windows/: CMakeLists.txt
src/windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
